# agent-lanes

./: .gitignore  CHANGELOG.md  CONTRACT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
agent_lanes/: __init__.py  cli.py  config.py  defaults.py  errors.py  selftest.py  server.py  store.py  timeutil.py
agent_lanes/templates/pack-handoff/: CLAUDE-REVIEWER-PROMPT.md  handoff.yaml
agent_lanes/templates/pool/: README.md  handoff.yaml
agent_lanes/templates/pool/dispatchers/: POLLING-CHAT-PROMPT.md  README.md  claude.sh  codex.sh
agent_lanes/templates/workspace/: POLLING-MONITOR-PROMPT.md  README.md  REVIEWER-AGENT-PROMPT.md  dispatcher.sh  handoff.yaml
docs/: prompt-pack-guide.md
examples/two-terminal/: README.md  agent-a.sh  agent-b.sh  handoff.yaml
tests/: test_cli.py  test_server.py  test_store.py
