[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lanes"
version = "0.1.0"
description = "Local file-backed coordination queue for AI coding agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
test = ["pytest>=8"]

[project.scripts]
agent-lanes = "agent_lanes.cli:main"

[tool.setuptools.package-data]
agent_lanes = ["templates/pack-handoff/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
